# AI-MLOps-TimeSeries

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  app.py  celery_app.py  global_config.py  pyproject.toml  requirements.txt  requirements_conda.txt
backend/control/: control_helper.py  control_modal.py  db_modal.py
backend/control/ingested/: ingested_1.csv
backend/data_processing/: data_processing_config.py  data_processing_helper.py  data_processing_pipeline.py
backend/data_processing/imputers/: linear_imputer.py  mean_imputer.py  median_imputer.py  nearest_imputer.py
backend/data_processing/outliers/: isolation_forest_detector.py  local_outlier_factor_detector.py  zscore_detector.py
backend/forecasting/: forecasting_config.py  forecasting_helper.py  forecasting_pipeline.py
backend/metrics/: metrics_helper.py  metrics_pipeline.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: API.js  Main.js  constants.js  index.js
mysql/: Dockerfile
mysql/scripts/: mlops_ts_fcst_data_history_table.sql  mlops_ts_fcst_data_table.sql  mlops_ts_fcst_metric_table.sql  mlops_ts_fcst_model_table.sql  mlops_ts_fcst_parameter_table.sql  mlops_ts_fcst_train_history_table.sql  mlops_ts_fcst_train_metric_table.sql  mlops_ts_fcst_train_parameter_table.sql  mlops_ts_fcst_user_table.sql
python_image/: Dockerfile  requirements.txt  requirements_conda.txt
python_visual_image/: Dockerfile  requirements.txt
visualization/: Dockerfile  app.py  config.py  db_wrapper.py  pyproject.toml
(+25 files in other folders)
