[tool.poetry]
name = "python-visual-image"
version = "0.1.0"
description = ""
authors = ["Rishav Saigal <rishavsaigal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
